--- a/source/_posts/日常开发踩坑.md
+++ b/source/_posts/日常开发踩坑.md
@@ -10,3 +10,45 @@ categories:
 1. jq懒加载插件  https://github.com/tuupola/jquery_lazyload 
  三步走 data-original属性 图片宽高必须设置一个 调用lazyload方法，配置相关参数
 2. 腾讯视频开发文档 http://v.qq.com/open/doc/tvpapi2.0.pdf
++ 3.文字溢出处理
+```css
+<!--单行溢出-->
+.one_txt_cut {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+<!--多行溢出-->
+.txt_cut {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+```
+### 宝塔代理配置
+1.创建网站
+
+![image](/assets/img/js/bt-1.png)
+
+2.填写域名和对应文件夹路径
+
+3.修改对应域名的config文件
+
+![image](/assets/img/js/bt-3.png)
+
+4.重启宝塔；
+
+### IOS中position:fixed的弹出框中的input出现光标错位的问题
+```css
+<!--弹框出现的时候给body加上如下的类-->
+.fixed {
+    position: fixed;
+    width: 100%;
+}
+<!--弹框消失的时候-->
+.por {
+    position：relative;
+}
+```
