--- a/source/_posts/日常开发踩坑.md
+++ b/source/_posts/日常开发踩坑.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "日常猜坑"
+date: 2018-2-05 20:02
+title: "日常踩坑"
 comments: true
 tags: 
 	- code 前端
@@ -52,3 +53,14 @@ categories:
     position：relative;
 }
 ```
+### js调用原生app的方法；
+```js
+//andriod
+window.control.tologin(2); //control为android提供的对象名称，tologin为方法名，2为参数；
+//ios
+window.location.herf="ios://tologin?needVaildeMobile=2" // tologin为方法名，needVaildeMobile为参数名，2为参数值;
+```
+
+
+
+
