新增博客内容

--- a/source/_posts/日常开发踩坑.md
+++ b/source/_posts/日常开发踩坑.md
@@ -60,6 +60,10 @@ window.control.tologin(2); //control为android提供的对象名称，tologin为
 //ios
 window.location.herf="ios://tologin?needVaildeMobile=2" // tologin为方法名，needVaildeMobile为参数名，2为参数值;
 ```
+### 淘宝rem布局（flexible.js）
++ flexible的原理是将屏幕分成100份，所以设计图的尺寸除以100即是rem的基准值（750的设计图1rem=75px,640的设计图1rem=64）；
++ flexible会根据设备的dpr来更改viewport的缩放比例，所以无需设置视口meta标签；
++ 在引入所有资源之前引入flexible.debug.js和flexible_css.debug.js；
 
 
 
