博客内容修改

--- a/source/_posts/日常开发踩坑.md
+++ b/source/_posts/日常开发踩坑.md
@@ -29,17 +29,25 @@ categories:
 }
 ```
 ### 宝塔代理配置
-1.创建网站
-
+1.下载宝塔，安装所需环境webserver使用nginx，php使用共生版本
 ![image](/assets/img/js/bt-1.png)
-
-2.填写域名和对应文件夹路径
-
-3.修改对应域名的config文件
-
-![image](/assets/img/js/bt-3.png)
+2.点击网站，创建网站，填写域名和对应文件夹路径，根目录为项目文件的路径；
+![image](/assets/img/js/bt-2.png)
+3.点击环境，nginx旁边的小文件夹打开vhost文件夹下的对应域名的config文件
+![image](/assets/img/js/bt-1.png)
+3.修改对应域名的config文件，在config文件下添加以下代码
+location /api/{ 
+                proxy_pass http://m.yl.test.tkinghr.com/api/;
+     } 
+js中ajax请求就使用/api/+完整路径,例如/api/act/ridSingle/saveActRidSingle，http://m.yl.test.tkinghr.com/api/;是48测试服的接口路径，如果需要和后端本地联调，改成对方的ip地址即可。
+如果完整的请求地址是这样的http://m.yl.test.tkinghr.com/mall/act/ridSingle/saveActRidSingle;则需要按下面的方法修改config文件，其实本质是webserver会将“/api/"映射成http://m.yl.test.tkinghr.com/api/，对本地请求做个代理，便不会产生跨域，上线后服务器上是不存在跨域的，所以这样做就可以同时保证代码上线后又能访问到正常接口地址；
+location /mall/{ 
+                proxy_pass http://m.yl.test.tkinghr.com/mall/act/ridSingle/saveActRidSingle;
+     } 
+![image](/assets/img/js/bt-4.png)
 
 4.重启宝塔；
+5.在浏览器中通过对于域名加文件路径访问页面，例如127.0.0.3/index.html;  127.0.0.3会映射成你项目的根路径，所以直接补全页面的路径就可以访问，至此即可解决跨域问题，调试时使用127.0.0.3跑项目即可；
 
 ### IOS中position:fixed的弹出框中的input出现光标错位的问题
 ```css
