博客新增，博客内容修改

--- a/source/_posts/日常开发踩坑.md
+++ b/source/_posts/日常开发踩坑.md
@@ -42,8 +42,8 @@ location /api/{
 js中ajax请求就使用/api/+完整路径,例如/api/act/ridSingle/saveActRidSingle，http://m.yl.test.tkinghr.com/api/;是48测试服的接口路径，如果需要和后端本地联调，改成对方的ip地址即可。
 如果完整的请求地址是这样的http://m.yl.test.tkinghr.com/mall/act/ridSingle/saveActRidSingle;则需要按下面的方法修改config文件，其实本质是webserver会将“/api/"映射成http://m.yl.test.tkinghr.com/api/，对本地请求做个代理，便不会产生跨域，上线后服务器上是不存在跨域的，所以这样做就可以同时保证代码上线后又能访问到正常接口地址；
 location /mall/{ 
-                proxy_pass http://m.yl.test.tkinghr.com/mall/act/ridSingle/saveActRidSingle;
-     } 
+                proxy_pass http://m.yl.test.tkinghr.com/mall/;
+     } js中ajax请求就使用/mall/+完整路径
 ![image](/assets/img/js/bt-4.png)
 
 4.重启宝塔；
