--- a/source/_posts/开发小结-六月.md
+++ b/source/_posts/开发小结-六月.md
@@ -10,7 +10,7 @@ categories:
 ---
 ### 微信网页开发踩坑
 + 开发微信公众号的h5页面时，会碰到一些微信分享之类的功能，这时便需要调用微信的js-jdk实现对应的功能。
-+ 微信JS-SDK说明文档 https://mp.weixin.qq.com/wiki?t=resource/res_main&id=mp1421141115
++ [微信JS-SDK说明文档](https://mp.weixin.qq.com/wiki?t=resource/res_main&id=mp1421141115)
 
 
 1. 绑定域名(js接口)以及开发者权限配置
@@ -84,4 +84,4 @@ wx.onMenuShareWeibo({
 });
 
 ```
-6. 其他接口参考文档(ps:因为我也没用过)
+6. 其他接口参考[文档](https://mp.weixin.qq.com/wiki?t=resource/res_main&id=mp1421141115)(ps:因为我也没用过)
