--- a/source/_posts/前端开发中遇到的问题.md
+++ b/source/_posts/前端开发中遇到的问题.md
@@ -1,10 +1,13 @@
 ---
 layout: post
-title: "前端开发中遇到的小问题"
+title: "css是图片模糊、修改placeholder的样式、svn的使用、checkbox有checked属性但不选中的bug"
 date: 2017-12-06 11:14
 comments: true
 tags: 
-	- code 前端
+	- css
+	- axios
+	- reg
+	- svn
 categories:
 	- JavaScript
 ---
