--- a/source/_posts/开发小结-七月.md
+++ b/source/_posts/开发小结-七月.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title: "开发小结"
+title: "html2canvas插件的使用、ajax中contentType参数的配置、css中background-attachment属性的使用"
 date: 2018-07-09 14:00
 comments: true
 tags: 
-	- code 前端 
+	- canvas
+	- ajax
+	- css
 categories:
 	- JavaScript 
 ---
