--- a/source/_posts/开发小结-八月(移动端踩坑).md
+++ b/source/_posts/开发小结-八月(移动端踩坑).md
@@ -1,10 +1,13 @@
 ---
 layout: post
-title: "开发小结"
+title: "vue中router-link的replace属性、iframe存在的坑、IntersectionObserver的使用、webpack启动本地服务的配置"
 date: 2018-08-03 15:00
 comments: true
 tags: 
-	- code 前端 
+	- javaScript
+	- webpack
+	- iframe
+	- vue
 categories:
 	- JavaScript 
 ---
