--- a/source/_posts/开发小结-四月.md
+++ b/source/_posts/开发小结-四月.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-title: "开发小结"
+title: "vue中$set的使用、vue-router使用history模式服务端配置、webpack中服务器代理的配置"
 date: 2018-04-09 14:55
 comments: true
 tags: 
-	- code 前端 
+	- vue
+	- vue-router
 categories:
 	- JavaScript 
 ---
@@ -77,7 +78,7 @@ break;
 接口处理
 
 ```JavaScript
-//代理配置，在webpack中config中配置请求接口时将完整接口地址拼接上即可 如hwww.abc.com/api/user/isLogin ,请求是地址为user/isLogin;
+//代理配置，在webpack中config中配置请求接口时将完整接口地址拼接上即可 如www.abc.com/api/user/isLogin ,请求是地址为user/isLogin;
 proxyTable: {
       "/api": {
         target: 'www.abc.com/api/',
