--- a/source/_posts/开发小结.md
+++ b/source/_posts/开发小结.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "开发小结"
+title: "常见的meta标签、webview中和原生交互以及swiper的使用"
 date: 2018-03-15 11:02
 comments: true
 tags: 
@@ -13,7 +13,7 @@ categories:
  ```html
  <meta name='shareTitle' content="message">
  ```
-### 使用swiper时候遇上的坑
+### 使用swiper时候遇上的坑([官方文档](https://www.swiper.com.cn/))
 1. 当swiper中包含图片且图片是异步动态加载的时候，初始化swiper的时候添加observer属性即可
 ```javaScript
 var mySwiper = new Swiper('.swiper-container', {
