--- a/source/_posts/日常开发踩坑.md
+++ b/source/_posts/日常开发踩坑.md
@@ -1,10 +1,13 @@
 ---
 layout: post
 date: 2018-2-05 20:02
-title: "日常踩坑"
+title: "宝塔代理配置、css文字溢出处理、jq懒加载插件使用、腾讯视频开发文档、webview中js与原生app交互、rem布局、js唤醒app"
 comments: true
 tags: 
-	- code 前端
+	- css
+	- 宝塔
+	- webview
+	- rem
 categories:
 	- JavaScript
 ---
