--- a/source/_posts/开发小结-六月.md
+++ b/source/_posts/开发小结-六月.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "开发小结"
+title: "微信分享"
 date: 2018-06-13 11:05
 comments: true
 tags: 
-	- code 前端 
+	- 微信
 categories:
 	- JavaScript 
 ---
